compiler/tests/template/success/add.jazz
export fn main<:n, m>(reg ptr u64[n+m] sres) -> reg u64 {
  reg u64 res = sres[0];
  return res;
}
