compiler/tests/template/fail/length_var_not_allowed.jazz
// n does not really exist as a value, should it fail?
// what if the function is inline?

export fn main<:n> () -> reg u64 {
  reg u64 res = n;
  return res;
}
